# npbuffer

./: README.md  pyproject.toml
src/NumpyCircularBuffer/: __init__.py
src/npbuffer/: __init__.py
tests/: test_NumpyCircularBuffer.py  test_head_equal_maxlen.py  test_wrapping_big_numbers.py
